--- a/css/style.css
+++ b/css/style.css
@@ -50,22 +50,24 @@ ul,li
 .maintitle
 {
     font-weight: 700;
-    font-size: 30px;
     color: #111C38;
     position: relative;
     z-index: 10;
+    left:50%;
+    transform: translate(-50%, 0);
 }
 .title
 {
     font-weight: 700;
     text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
-    font-size: 45px;
     color: #fff;
     position: absolute;
-    font-family: 'Barlow', sans-serif;
-    top: 21px;
-    left: 433px;
+    left: 50%;
+    transform: translate(-50%, 0);
 
+}
+.title-Our-service{
+    top: 29px;
 }
 .thirdtitle
 {
@@ -74,7 +76,7 @@ ul,li
     font-size: 58px;
     color: #fff;
     position: absolute;
-    font-family: 'Barlow', sans-serif;
+  
     top: 14px;
     left: 455px;
 }
@@ -85,7 +87,7 @@ ul,li
     font-size: 58px;
     color: #fff;
     position: absolute;
-    font-family: 'Barlow', sans-serif;
+  
     top: 9px;
     left: 224px;
 }
@@ -96,20 +98,21 @@ ul,li
     font-size: 55px;
     color: #fff;
     position: absolute;
-    font-family: 'Barlow', sans-serif;
+  
     top: -34px;
     left: 0px;
 }
-.sixtitle
+/* .sixtitle
 {
     font-weight: 700;
     text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 45px;
     color: #fff;
     position: absolute;
-    font-family: 'Barlow', sans-serif;
-    top: -2px;
-    left: 593px;
+  
+} */
+.title-faqs{
+    top: 6px;
 }
 .sixtitle2
 {
@@ -118,21 +121,13 @@ ul,li
     font-size: 45px;
     color: #fff;
     position: absolute;
-    font-family: 'Barlow', sans-serif;
     top: 19px;
     left: 596px;
 }
 
 .customtitle
-{
-    font-weight: 700;
-    text-shadow: -1px 0 rgb(17 28 56 / 20%), 0 1px rgb(17 28 56 / 20%), 1px 0 rgb(17 28 56 / 20%), 0 -1px rgb(17 28 56 / 20%);
-    font-size: 45px;
-    color: #fff;
-    position: absolute;
-    font-family: 'Barlow', sans-serif;
-    top: -25px;
-    left: 471px;
+{  
+    top: -18px;
 }
 .arrow1
 {
@@ -173,26 +168,24 @@ z-index: 20;}
 .new
 {
     border-bottom: 4px solid #EF0A21;
-    position: absolute;
-    left: 595px;
+    position: absolute;  
+}
+.title-service-border{
+    left: 45%;
     width: 100px;
     top: 105px;
 }
-.newborder
+.custom-title-border
 {
-    border-bottom: 4px solid #EF0A21;
-    position: absolute;
-    left: 623px;
+    left: 45%;
     width: 80px;
     top: 55px;
 }
 .faqborder
 {
-    border-bottom: 4px solid #EF0A21;
-    position: absolute;
-    left: 615px;
     width: 60px;
     top: 72px;
+    left: 47.5%;
 }
 .request
 {
