--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+/* ----------------------common css------------------------------- */
 a{
     text-decoration: none;
     color: black;   
@@ -6,6 +6,7 @@ a{
 p{font-size: 20px;}
 *{
     font-family: 'Barlow', sans-serif;
+    box-sizing: border-box;
 }
 ul,li
 {
@@ -27,9 +28,11 @@ ul,li
 {
     background-color:#EAF8FF;
 }
+/*-------------------------------- button css---------------------------------- */
 .blue-button
 {
     background-color:#CEE5F1 ;
+    padding: auto;
 }
 :hover.blue-button
 {
@@ -43,6 +46,7 @@ ul,li
 {
     background-color: #EF0A21;
     color: white;
+    padding: auto;
 }
 :hover.red-button {
     background-color: #CEE5F1;
@@ -51,6 +55,7 @@ ul,li
     transition: all 0.5s ease-in-out;
 }
 .red-button:hover span svg path{ fill :  #EF0A21; }
+/*------------------------------------------ title css=====-------------------------------- */
 .maintitle
 {
     font-weight: 700;
@@ -254,8 +259,7 @@ z-index: 20;}
 }
 
 
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
+
 .mySlides {display: none}
 img {vertical-align: middle;}
 /* Slideshow container */
@@ -322,8 +326,11 @@ img {vertical-align: middle;}
     width : 350px;
     height : auto;
 }
-
-
+ /*------------------------------------ content css-------------------------- */
+.content-slider-img{
+    width: 100%;
+    height: 380px;
+}
 
 
 /* footer */
@@ -571,20 +578,32 @@ footer {
     .container-div{
         max-width: 1024px;
     }
+    h1{font-size: 35px;}
+    
 }
 @media only screen and (max-width: 1100px){
     .container-div{
         max-width: 992px;
+    }
+    .red-button , .blue-button{
+        padding: 16px 28px !important;
     }
 }
 @media only screen and (max-width: 1024px){
     .container-div{
         max-width: 800px;
     }
+    p{font-size: 18px;}
+    .red-button , .blue-button{
+        padding: 16px 20px !important;
+    }
 }
 @media only screen and (max-width: 950px){
     .container-div{
         max-width: 768px;
+    }
+    .red-button , .blue-button{
+        padding: 16px 20px !important;
     }
 }
 @media only screen and (max-width: 850px){
