--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ a{
     text-decoration: none;
     color: black;   
 }
-p{font-size: 20px;}
+p{font-size: 17px;}
 *{
     font-family: 'Barlow', sans-serif;
     box-sizing: border-box;
@@ -13,7 +13,7 @@ ul,li
     margin-bottom: 0px;
 }
 .container-div{
-    max-width:1320px;
+    max-width:1274px;
     margin: 0 auto;
 }
 .font-Poppins
@@ -62,8 +62,6 @@ ul,li
     color: #111C38;
     position: relative;
     z-index: 10;
-    left:50%;
-    transform: translate(-50%, 0);
 }
 .title
 {
@@ -111,6 +109,46 @@ ul,li
     top: -34px;
     left: 0px;
 }
+.proptext .proptitle
+{
+    color: #EAF8FF;
+}
+.proptitle
+{
+    font-weight: 700;
+    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+    font-size: 45px;
+    color: #fff;
+    position: absolute;
+    font-family: 'Barlow', sans-serif;
+    top: 21px;
+    left: 51%;
+    transform: translate(-50%, 0);
+}
+.proptitle2
+{
+    font-weight: 700;
+    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+    font-size: 45px;
+    color: #fff;
+    position: absolute;
+    font-family: 'Barlow', sans-serif;
+    top: -27px;
+    left: 51%;
+    transform: translate(-50%, 0);
+}
+.gallerytitle
+{
+    font-weight: 700;
+    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+    font-size: 45px;
+    color: #fff;
+    position: absolute;
+    font-family: 'Barlow', sans-serif;
+    top: 25px;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
 /* .sixtitle
 {
     font-weight: 700;
@@ -131,12 +169,30 @@ ul,li
     color: #fff;
     position: absolute;
     top: 19px;
-    left: 596px;
+    left: 50%;
+    transform: translate(-50%, 0px);
 }
-
+.sixtitle3
+{
+    font-weight: 700;
+    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+    font-size: 45px;
+    color: #fff;
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    transform: translate(-50%, 0px);
+}
 .customtitle
 {  
-    top: -18px;
+    font-weight: 700;
+    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+    font-size: 50px;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    top: -30px;
 }
 .arrow1
 {
@@ -177,16 +233,20 @@ z-index: 20;}
 .new
 {
     border-bottom: 4px solid #EF0A21;
-    position: absolute;  
+    margin: auto;  
+    display: block;
 }
 .title-service-border{
-    left: 45%;
     width: 100px;
     top: 105px;
 }
 .custom-title-border
 {
-    left: 45%;
+    width: 80px;
+    top: 55px;
+}
+.proptality-border
+{
     width: 80px;
     top: 55px;
 }
@@ -194,7 +254,6 @@ z-index: 20;}
 {
     width: 60px;
     top: 72px;
-    left: 47.5%;
 }
 .request
 {
@@ -209,7 +268,6 @@ z-index: 20;}
     background: #111C38;
     border-radius: 24px;
     padding: 50px 0px 50px;
-    margin: 0 15px;
     position: relative;
 }
 .forminput
@@ -247,9 +305,6 @@ z-index: 20;}
 }
 .new-border
 {
-    border-bottom: 4px solid #EF0A21;
-    position: absolute;
-    left: 616px;
     width: 80px;
     top: 128px;
 }
@@ -521,24 +576,18 @@ footer {
 .faqborder2
 {
     border-bottom: 4px solid #EF0A21;
-    position: absolute;
-    left: 615px;
+    display: block;
+    margin: auto;
     width: 60px;
     top: 97px;
 }
-.newfont
-{
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 130%;
-    color: #111C38;
-}
+
 .card-img-top1
 {
     /* object-fit: cover; */
     box-sizing: border-box;
-    width:33rem;
-    min-height: 33rem;
+    width:26rem;
+    min-height: 26rem;
 }
 .card1{
     margin: 10px 0;
@@ -560,19 +609,67 @@ footer {
     color: #fff;
 }
 /* storage */
+.storagecard
+{
+    width: 30rem;
+    height: 38rem;
+}
+.heaterimg
+{
+    width: 100%;
+    height: 18rem;
+}
 .tableborder
 {
     border: 1px solid black;
   border-collapse: collapse;
 }
-
-
-
+.galleryimg
+{
+    width: 416px;
+    height: 250px;
+}
+.paintcard
+{
+    width: 18rem;
+}
+.solarimg
+{
+    height: 21rem;
+}
+.brandcard
+{
+    width: 24rem;
+}
+.heaterbrand
+{
+    width: 15rem;
+    height: 150px;
+}
 /*---------------------------------------------- media query ------------------------------------------------------------ */
 @media only screen and (max-width: 1400px){
     .container-div{
         max-width: 1150px;
     }
+    .galleryimg
+{
+    width: 370px;
+    height: 250px;
+}
+.paintcard
+{
+    width: 17rem;
+}
+.brandcard
+{
+    width: 23rem;
+}
+h1{font-size: 35px;}
+.heaterbrand
+{
+    width: 13rem;
+    height: 150px;
+}
 }
 @media only screen and (max-width: 1200px){
     .container-div{
