--- a/css/style.css
+++ b/css/style.css
@@ -1088,3 +1088,26 @@ h1{font-size: 38px;}
         height: 180px;
     }
 }
+   
+
+
+.heater-brands-img{
+    width: 240px;  
+     /* media >  600px  >> width:200px; */
+    min-height: 150px;
+ 
+}
+.w-30{width:30%; max-width: 324px;}
+@media only screen and (max-width: 1200px){
+.card1{width:25rem}
+.card-img-top1{width:21rem; min-height: 21rem;}
+}
+@media only screen and (max-width: 950px){
+.card1{width:20rem}
+.card-img-top1{width:16rem; min-height: 16rem;}
+}
+@media only screen and (max-width: 850px){
+.card1{width:18rem}
+.card-img-top1{width:14rem; min-height: 14rem;}
+}
+
