--- a/css/style.css
+++ b/css/style.css
@@ -920,6 +920,10 @@ h1{font-size: 38px;}
 {
     height: 350px;
 }
+.addtext
+    {
+        font-size: 16px;
+    }
 }
 @media only screen and (max-width: 1024px){
     .container-div{
@@ -1092,6 +1096,10 @@ h1{font-size: 38px;}
     .footer-link h4 {
         font-size: 18px;
     }
+    .content-slider-img
+    {
+        height: 260px;
+    }
 
 }
 @media only screen and (max-width: 441px){
@@ -1121,6 +1129,10 @@ h1{font-size: 38px;}
     .brands-img {
         width: 330px;
         height: auto;
+    }
+    .red-button, .blue-button 
+    {
+        padding: 16px 38px !important;
     }
 }
    
