--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ ul,li
     position: relative;
     z-index: 10;
 }
+.shadowtext
+{
+   
+    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);   
+}
 .headerfont
 {
     font-size: 20px;
@@ -72,12 +77,11 @@ ul,li
    font-size: 43px;
     width: 100%;
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     color: #fff;
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
-    top: 24px;
+    top: -7px;
 
 }
 .carddescription
@@ -91,7 +95,6 @@ ul,li
 .thirdtitle
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 58px;
     color: #fff;
     position: absolute;
@@ -102,7 +105,6 @@ ul,li
 .forthtitle
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 58px;
     color: #fff;
     position: absolute;
@@ -113,7 +115,6 @@ ul,li
 .fifthtitle
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 55px;
     color: #fff;
     position: absolute;
@@ -128,7 +129,6 @@ ul,li
 .proptitle
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 44px;
     color: #fff;
     position: absolute;
@@ -140,7 +140,6 @@ ul,li
 .proptitle2
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 44px;
     color: #fff;
     position: absolute;
@@ -152,7 +151,6 @@ ul,li
 .gallerytitle
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 44px;
     color: #fff;
     position: absolute;
@@ -164,7 +162,6 @@ ul,li
 .heatertitle
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 41px;
     color: #fff;
     position: absolute;
@@ -183,7 +180,7 @@ ul,li
 {
         width:100%;
         font-weight: 700;
-       text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+
         font-size: 41px;
         color: #fff;
         position: absolute;
@@ -195,7 +192,6 @@ ul,li
 .methodtitle
 {
     font-weight: 700;
-   text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 41px;
     color: #fff;
     position: absolute;
@@ -207,7 +203,7 @@ ul,li
 {
         width: 100%;
         font-weight: 700;
-       text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+
         font-size: 40px;
         color: #fff;
         position: absolute;
@@ -219,7 +215,6 @@ ul,li
 {
     width: 100%;
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
      font-size: 40px;
      color: #fff;
      position: absolute;
@@ -231,7 +226,7 @@ ul,li
 {
         width: 100%;
         font-weight: 700;
-       text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+
         font-size: 40px;
         color: #fff;
         position: absolute;
@@ -241,7 +236,6 @@ ul,li
 }
 .customtitle2 {
     font-weight: 700;
-   text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 44px;
     color: #fff;
     position: absolute;
@@ -252,7 +246,6 @@ ul,li
 /* .sixtitle
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 45px;
     color: #fff;
     position: absolute;
@@ -264,7 +257,6 @@ ul,li
 .sixtitle2
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 44px;
     color: #fff;
     position: absolute;
@@ -275,7 +267,6 @@ ul,li
 .sixtitle3
 {
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 44px;
     color: #fff;
     position: absolute;
@@ -286,7 +277,6 @@ ul,li
 .customtitle
 {  
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 44px;
     color: #fff;
     position: absolute;
@@ -298,7 +288,6 @@ ul,li
 {
     width: 100%;
     font-weight: 700;
-   text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 41px;
     color: #fff;
     position: absolute;
@@ -306,6 +295,10 @@ ul,li
     transform: translate(-50%, 0px);
     top: -27px;
 
+}
+.mainheading
+{
+    align-self: center;
 }
 .arrow1
 {
@@ -390,7 +383,6 @@ z-index: 20;}
 { 
     width: 100%;
     font-weight: 700;
-   text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 40px;
     color: #fff;
     position: absolute;
@@ -402,11 +394,23 @@ z-index: 20;}
 .titlecolor .newbrandtitle {
     color: #EAF8FF;
 }
-
+.proptext .costtitle
+{
+    color: #EAF8FF;
+}
+.costtitle {
+    font-weight: 700;
+    font-size: 44px;
+    color: #fff;
+    position: absolute;
+    font-family: 'Barlow', sans-serif;
+    top: -30px;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
 .newbrandtitle {
     width: 100%;
     font-weight: 700;
-    text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
     font-size: 42px;
     color: #fff;
     position: absolute;
@@ -420,7 +424,7 @@ z-index: 20;}
 .newinstanttitle {
     width: 100%;
     font-weight: 700;
-     text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+
     font-size: 34px;
     color: #fff;
     position: absolute;
@@ -432,7 +436,7 @@ z-index: 20;}
 {
         width: 100%;
         font-weight: 700;
-         text-shadow: -1px 0 rgba(17, 28, 56 , 0.2), 0 1px rgba(17, 28, 56 , 0.2), 1px 0 rgba(17, 28, 56 , 0.2), 0 -1px rgba(17, 28, 56 , 0.2);
+    
         font-size: 34px;
         color: #fff;
         position: absolute;
@@ -501,7 +505,6 @@ z-index: 20;}
 {
     align-self: end;
 }
-
 
 .mySlides {display: none}
 img {vertical-align: middle;}
